--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);*/
+/*@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 @font-face {
   font-family: 'Noto Sans KR';
@@ -49,9 +49,9 @@
         url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),
         url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');
  }
-
+*/
 * {margin:0;padding:0;}
-body {color:#555;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200;}
+body {color:#555;font:14px/1.4 'Malgun Gothic', '돋움', dotum, sans-serif;}
 a {color:#555;text-decoration:none;}
 ol, li {list-style:none;}
 table {table-layout:fixed;width:100%;border-collapse:collapse;border:0;}
@@ -60,12 +60,12 @@ fieldset, img {border:0;}
 img, iframe {vertical-align:top;}
 legend, caption {visibility:hidden;width:0;font-size:0;line-height:0;text-indent:-5000px;}
 address, em {font-style:normal;}
-button {overflow:visible;cursor:pointer;background:none;border:0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200}
+button {overflow:visible;cursor:pointer;background:none;border:0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
 input, select, textarea, button, label, td img {vertical-align:middle;}
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, nav, menu, nav, section {display:block;}
 
-select {height:36px;border:1px solid #d0d0d0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200}
-textarea, .inputTxt {padding:7px 5px;border:1px solid #ddd;resize:none;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200}
+select {height:36px;border:1px solid #d0d0d0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
+textarea, .inputTxt {padding:7px 5px;border:1px solid #ddd;resize:none;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
 input.inputTxt:focus,
 textarea:focus {border:1px solid #57b8bb;}
 .inputChk {vertical-align:-1px;}
@@ -86,7 +86,7 @@ textarea:focus {border:1px solid #57b8bb;}
 .radioB input {position:absolute;visibility:hidden;position:static\9;visibility:visible\9;}
 .radioB input + span {display:inline-block;}
 .radioB input + span:before {content:"";display:inline-block;display:none\9;margin:0 10px 0 0;width:24px;height:24px;background:url(../images/bg_radioB.gif) no-repeat 0 0;vertical-align:-6px;}
-.radioB input:checked + span {font-weight:500;}
+.radioB input:checked + span {font-weight:bold;}
 .radioB input:checked + span:before {background-position:0 -24px;}
 
 hr {margin:50px 0;border:0;border-top:1px solid #000;}
